--- a/css/style.css
+++ b/css/style.css
@@ -568,10 +568,6 @@ video {
   }
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -621,6 +617,10 @@ video {
   margin-right: auto;
 }
 
+.-ml-2 {
+  margin-left: -0.5rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -643,6 +643,10 @@ video {
 
 .ml-1\.5 {
   margin-left: 0.375rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .mt-2 {
@@ -683,6 +687,10 @@ video {
   display: block;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
 }
@@ -711,8 +719,8 @@ video {
   height: 10rem;
 }
 
-.h-\[100vh\] {
-  height: 100vh;
+.h-\[35vh\] {
+  height: 35vh;
 }
 
 .h-\[70vh\] {
@@ -723,16 +731,16 @@ video {
   height: 100%;
 }
 
-.h-\[35vh\] {
-  height: 35vh;
+.h-\[40vh\] {
+  height: 40vh;
 }
 
-.min-h-\[100vh\] {
-  min-height: 100vh;
+.h-\[37vh\] {
+  height: 37vh;
 }
 
-.min-h-\[35vh\] {
-  min-height: 35vh;
+.h-\[38vh\] {
+  height: 38vh;
 }
 
 .w-10 {
@@ -850,10 +858,6 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
 .scroll-smooth {
   scroll-behavior: smooth;
 }
@@ -872,6 +876,11 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.bg-\[\#0e1e25\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 30 37 / var(--tw-bg-opacity));
 }
 
 .bg-cyan-800 {
@@ -945,6 +954,11 @@ video {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -1073,6 +1087,11 @@ video {
   letter-spacing: -0.025em;
 }
 
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
@@ -1142,6 +1161,11 @@ video {
   background-color: rgb(22 78 99 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-gray-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
@@ -1160,6 +1184,11 @@ video {
 .hover\:text-gray-300:hover {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
@@ -1216,10 +1245,6 @@ video {
 
   .md\:flex {
     display: flex;
-  }
-
-  .md\:grid {
-    display: grid;
   }
 
   .md\:hidden {
